# todocli

./: .gitignore  README.md  database.py  model.py  pyproject.toml  todocli.py  todos.db
