[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["benthecoder <benthecoder07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.16.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
